projekt/node/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flask-to-mongo
spec:
  podSelector:
    matchLabels:
      app: mongo   # 👈 polityka dotyczy Mongo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: flask   # 👈 tylko Flask może wejść
      ports:
        - protocol: TCP
          port: 27017
